--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -639,4 +639,10 @@
      <dimen name="status_bar_height_portrait">100.0px</dimen>
      <dimen name="status_bar_height_landscape">100.0px</dimen>
 
+   <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/battery/charging_type</string>
+
+    <!-- Expected value from fast charging status file  -->
+    <string name="config_oemFastChargerStatusValue" translatable="false">Fast</string>
+
 </resources>
